Se agregó un formulario desde develop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>CursoGitUdemi</title>
 </head>
 <h1>Titulo modificado desde develop</h1>
+
+<form action="#" method="get">
+    <input type="button" value="Enviar">
+</form>
+
 <body>
     
 </body>
