Se agregó un nuevo input

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Titulo modificado desde develop</h1>
 
 <form action="#" method="get">
+    <input type="text" name="firtstName" id="firstName">
     <input type="button" value="Enviar">
 </form>
 
